--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3'
 
 services:
-  product-service:
-    build: ./servicos
+  service-blog:
+   build: ./servicos
+   volumes:
+     - ./servicos:/usr/src/app
+   ports:
+     - 5001:80
+  service-login:
+    build: ./sistemaLogin
     volumes:
-      - ./servicos:/usr/src/app
+      - ./sistemaLogin:/usr/src/login
     ports:
-      - 5001:80
+      - 5002:80
